[gd_scene load_steps=4 format=3 uid="uid://dsihg6mcq4ysb"]

[ext_resource type="Script" path="res://script/dev_mode.gd" id="1_cqayl"]
[ext_resource type="LabelSettings" uid="uid://jda8so48mgcw" path="res://scenes/screens/dev_mode_font.tres" id="2_0wr73"]

[sub_resource type="LabelSettings" id="LabelSettings_fvbuo"]
line_spacing = 6.0
font_size = 35
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="DevMode" type="CanvasLayer" node_paths=PackedStringArray("zones", "scenes", "units", "contents")]
layer = 100
script = ExtResource("1_cqayl")
all_zones = Array[String](["dev_testing", "room_f1n1", "room_f1n2", "f1_male_bathroom", "f1_female_bathroom", "laboratory", "f1n_hallway", "yard", "dining_room", "f1s_hallway", "room_f1s1", "room_f1s2", "art_room", "infirmary"])
zones = NodePath("Contents/SceneDetails/Menus/Zones")
scenes = NodePath("Contents/SceneDetails/Menus/Scenes")
units = NodePath("Contents/SceneDetails/Menus/Units")
contents = NodePath("Contents")

[node name="Contents" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ReloadButton" type="Button" parent="Contents"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.015
anchor_top = 0.03
anchor_right = 0.015
anchor_bottom = 0.03
focus_mode = 0
theme_override_font_sizes/font_size = 35
text = "Recargar"

[node name="SceneDetails" type="HBoxContainer" parent="Contents"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.015
anchor_top = 0.1
anchor_right = 0.015
anchor_bottom = 0.266
offset_left = 0.200001
offset_right = 295.2
offset_bottom = -0.279999

[node name="Labels" type="VBoxContainer" parent="Contents/SceneDetails"]
layout_mode = 2
alignment = 2

[node name="ZoneLabel" type="Label" parent="Contents/SceneDetails/Labels"]
layout_mode = 2
text = "Zona: "
label_settings = SubResource("LabelSettings_fvbuo")

[node name="SceneLabel" type="Label" parent="Contents/SceneDetails/Labels"]
layout_mode = 2
text = "Escena: "
label_settings = SubResource("LabelSettings_fvbuo")

[node name="UnitLabel" type="Label" parent="Contents/SceneDetails/Labels"]
layout_mode = 2
text = "Unidad: "
label_settings = SubResource("LabelSettings_fvbuo")

[node name="Menus" type="VBoxContainer" parent="Contents/SceneDetails"]
layout_mode = 2

[node name="Zones" type="MenuButton" parent="Contents/SceneDetails/Menus"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Ninguna"
flat = false
alignment = 0

[node name="Scenes" type="MenuButton" parent="Contents/SceneDetails/Menus"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Ninguna"
flat = false
alignment = 0

[node name="Units" type="MenuButton" parent="Contents/SceneDetails/Menus"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Ninguna"
flat = false
alignment = 0

[node name="DialogDetails" type="HBoxContainer" parent="Contents"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.352
anchor_top = 0.76
anchor_right = 0.571
anchor_bottom = 0.76
offset_bottom = -6.10352e-05
grow_horizontal = 2
grow_vertical = 0

[node name="LineLabel" type="Label" parent="Contents/DialogDetails"]
layout_mode = 2
text = "Linea:
"
label_settings = ExtResource("2_0wr73")

[node name="LineNumberLabel" type="Label" parent="Contents/DialogDetails"]
layout_mode = 2
text = "0"
label_settings = ExtResource("2_0wr73")

[connection signal="pressed" from="Contents/ReloadButton" to="." method="_on_script_reload"]
